[gd_scene load_steps=5 format=3 uid="uid://bgatm4hq14yir"]

[ext_resource type="Script" path="res://code/game_states/state_child.gd" id="1_41wo4"]
[ext_resource type="Texture2D" uid="uid://b23u5vx75l25u" path="res://resources/levels/Overall_ChildMap.png" id="2_qoe4h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x4t43"]
size = Vector2(5032, 537)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hrvyi"]
size = Vector2(301, 3409)

[node name="StateChild" type="Node2D"]
script = ExtResource("1_41wo4")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -4
position = Vector2(960, 540)
scale = Vector2(0.24, 0.21)
texture = ExtResource("2_qoe4h")

[node name="StaticBody2D4" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2(1016, -272)
shape = SubResource("RectangleShape2D_x4t43")
debug_color = Color(0.953243, 0, 0.554559, 0.42)

[node name="StaticBody2D5" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D5"]
position = Vector2(-152, 512)
shape = SubResource("RectangleShape2D_hrvyi")
debug_color = Color(0.963149, 0, 0.500419, 0.42)

[node name="StaticBody2D6" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D6"]
position = Vector2(2071, 472)
shape = SubResource("RectangleShape2D_hrvyi")
debug_color = Color(0.963149, 0, 0.500419, 0.42)

[node name="StaticBody2D7" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D7"]
position = Vector2(1032, 1352)
shape = SubResource("RectangleShape2D_x4t43")
debug_color = Color(0.953243, 0, 0.554559, 0.42)

[node name="Area1Timer" type="Timer" parent="."]

[node name="Area2Timer" type="Timer" parent="."]

[node name="Area3Timer" type="Timer" parent="."]

[node name="Area4Timer" type="Timer" parent="."]

[node name="Area1Min" type="Node2D" parent="."]
position = Vector2(24, 16)

[node name="Area1Max" type="Node2D" parent="."]
position = Vector2(736, 416)

[node name="Area2Min" type="Node2D" parent="."]
position = Vector2(1184, 32)

[node name="Area2Max" type="Node2D" parent="."]
position = Vector2(1896, 416)

[node name="Area3Min" type="Node2D" parent="."]
position = Vector2(24, 680)

[node name="Area3Max" type="Node2D" parent="."]
position = Vector2(768, 1064)

[node name="Area4Min" type="Node2D" parent="."]
position = Vector2(1160, 648)

[node name="Area4Max" type="Node2D" parent="."]
position = Vector2(1920, 1080)

[node name="StageTimer" type="Timer" parent="."]
